--- a/Index.HTML
+++ b/Index.HTML
@@ -14,7 +14,7 @@
     <a href="Random Recipes">Random Recipes</a>
     <form>
   <input type="text" placeholder="Search.." name="search">
-  <button type="Submit"><i class="Sea"></i></button>
+  <button type="Submit"><i class="Search"></i></button>
 </form>
   </div>
   <div class="container">
