--- a/Index.HTML
+++ b/Index.HTML
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
   <div class="Search Bar">
@@ -38,6 +38,8 @@
       </div>
     </div>
   </div>
+  
+  <script src = './assets/js/JavaScript.js'></script>
   
 </body>
 </html>
