put the img boxes

--- a/Index.HTML
+++ b/Index.HTML
@@ -9,10 +9,18 @@
 <body>
 <header>
   <header class="header">
-<h2>recipe<span class="assistant"> assistant</span></h2>
+<h2>Recipe<span class="assistant"> assistant</span></h2>
 
 </header>
 </header>
+<div class="row">
+  <div class="column-img">
+<img src="" alt="">
+  </div>
+  <div class="column-img">
+<img src="" alt="">
+  </div>
+</div>
 
   <div class="Search Bar">
     <form>
@@ -30,10 +38,10 @@
 <article class="ingredents">
   <h2>ingredents</h2>
   <ul>
-    <li>milk</li>
-    <li>egg</li>
-    <li>meat</li>
-    <li>stock</li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
   </ul>
 </article> 
 </div> 
@@ -49,17 +57,25 @@
 </div>
 <div class="column">
 </article>
-<article class="groceris">
-  <h2>groceris</h2>
+<article class="groceries">
+  <h2>groceries</h2>
   <ul>
     <li>
       
     </li>
   </ul>
-</article>
+  </article>
 </div>
  </div>
 </section>
+  </div>
+  <div class="row">
+    <div class="column-middle">
+      <h3>nutritional</h3>
+      <ul>
+        <li></li>
+      </ul>
+    </div>
   </div>
   <footer class="contact us">
       <h1>Contact Us</h1>
