--- a/Index.HTML
+++ b/Index.HTML
@@ -21,7 +21,7 @@
 </form>
 <div class="get recipe">
   <form action="click">
-  <input class="styled" type="button" value="get recipe" />
+  <input class="styled" type="button" value="Get Recipe" />
 </form>
 </div>
 <section>
