--- a/Index.HTML
+++ b/Index.HTML
@@ -9,10 +9,18 @@
 <body>
 <header>
   <header class="header">
-<h2>recipe<span class="assistant"> assistant</span></h2>
+<h2>Recipe<span class="assistant"> assistant</span></h2>
 
 </header>
 </header>
+<div class="row">
+  <div class="column-img">
+<img src="" alt="">
+  </div>
+  <div class="column-img">
+<img src="" alt="">
+  </div>
+</div>
 
   <div class="Search Bar">
     <form>
@@ -25,29 +33,55 @@
 </form>
 </div>
 <section>
-<article class="column">
-  <h2 class="float-left">ingredents</h2>
+  <div class="row">
+  <div class="column">  
+<article class="ingredents">
+  <h2>ingredents</h2>
   <ul>
-    <li>milk</li>
-    <li>egg</li>
-    <li>meat</li>
-    <li>stock</li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+</article> 
+</div> 
+<div class="column">
+<article class="directions">
+  <h2>directions</h2>
+  <ul>
+    <li>
+
+    </li>
   </ul>
 </article>
-<article class="column" >
-  <h2 class="float-center">directions</h2>
+</div>
+<div class="column">
 </article>
-<article class="column">
-  <h2 class="float-right">groceris</h2>
-</article>
+<article class="groceries">
+  <h2>groceries</h2>
+  <ul>
+    <li>
+      
+    </li>
+  </ul>
+  </article>
+</div>
+ </div>
 </section>
+  </div>
+  <div class="row">
+    <div class="column-middle">
+      <h3>nutritional</h3>
+      <ul>
+        <li></li>
+      </ul>
+    </div>
   </div>
   <footer class="contact us">
       <h1>Contact Us</h1>
       <p3>If You have any favorite reciepes or problems, let us know :D</p3>
   </footer>
     <div class="row">
-      <div class="column">
         <form action="ErrorDocument 404 /not-found-page.html">
           <label for="fname">First Name</label>
           <input type="text" id="fname" name="First name" placeholder="Your name..">
@@ -59,7 +93,6 @@
           <a href="contact">Contact</a>
         </form>
       </div>
-    </div>
   </div>
   
   <script src = './assets/js/JavaScript.js'></script>
