added the code to fetch and display ingredient list

--- a/Index.HTML
+++ b/Index.HTML
@@ -37,7 +37,7 @@
   <div class="column">  
 <article class="ingredents">
   <h2>ingredents</h2>
-  <ul>
+  <ul id = ingredients>
     <li></li>
     <li></li>
     <li></li>
