--- a/Index.HTML
+++ b/Index.HTML
@@ -55,16 +55,10 @@
   </ul>
 </article>
 </div>
-<div class="column">
-</article>
-<article class="groceries">
-  <h2>groceries</h2>
-  <ul>
-    <li>
-      
-    </li>
-  </ul>
-  </article>
+<div id= "Dish" class="column">
+
+  <h2>Dish</h2>
+  
 </div>
  </div>
 </section>
