--- a/Index.HTML
+++ b/Index.HTML
@@ -45,14 +45,11 @@
   </ul>
 </article> 
 </div> 
-<div class="column">
-<article class="directions">
-  <h2>directions</h2>
-  <ul>
-    <li>
+<div id= "Directions" class="column">
 
-    </li>
-  </ul>
+  <h2>Directions</h2>
+  
+  
 </article>
 </div>
 <div id= "Dish" class="column">
