made info display after pressing button

--- a/Index.HTML
+++ b/Index.HTML
@@ -29,7 +29,7 @@
 </form>
 <div class="get recipe">
   <form action="click">
-  <input class="styled" type="button" value="Get Recipe" />
+  <input class="styled" type="button" value="Get Recipe" id = "click-me" />
 </form>
 </div>
 <section>
